# FlowSom-Gui

./: .gitignore  FlowSOM_Analysis_Pipeline.ipynb  FlowSOM_Analysis_Pipeline_MRD_Test.ipynb  MRD_Triple_Pipeline.ipynb  README.md  analyze_results.py  benchmark_tmp.py  build.bat  build_log.txt  config.yaml  default_config.yaml  export_service.py  hyperparametersv5.py  launch_gui.py  main.py  mrd_pipeline.py  optimize_optuna_mrd.py  pipeline_config.py  pyproject.toml  requirements-gpu.txt  requirements.txt  results_grid_search_v4.csv  setup.py
Patients/: Pat1.json
Refactored/: README.md
Refactored/flowsom_pipeline_pro/: README.md  build.bat  build_log.txt  flowsom_gui.spec  launch_gui.py  requirements.txt  runtime_hook_debug.py
Refactored/flowsom_pipeline_pro/config/: default_config.yaml  pipeline_config.py
Refactored/flowsom_pipeline_pro/gui/: main_window.py
Refactored/flowsom_pipeline_pro/src/core/: clustering.py  metaclustering.py
Refactored/flowsom_pipeline_pro/src/pipeline/: pipeline_executor.py
Refactored/flowsom_pipeline_pro/src/services/: preprocessing_service.py
Refactored/flowsom_pipeline_pro/src/visualization/: flowsom_plots.py  gating_plots.py  html_report.py
assets/: generate_ico.py
cli/: main.py  parsers.py
config/: default_config.yaml  default_config.yaml.example  mrd_config.yaml  pipeline_config.py
config/panels/: aml_panel.yaml
gui/: main_window.py  prisma_icons.py  styles.py  workers.py
gui/adapters/: __init__.py  mrd_adapter.py
gui/dialogs/: __init__.py  expert_focus_dialog.py  pipeline_dashboard.py
gui/tabs/: __init__.py  home_tab.py
gui/widgets/: __init__.py  log_console.py  mrd_gauge.py  mrd_node_table.py  settings_card.py  toggle_switch.py
src/: exceptions.py
src/analysis/: __init__.py  blast_detection.py  mrd_calculator.py  prescreening.py
src/core/: auto_gating.py  clustering.py
src/io/: csv_exporter.py  patho_fcs_exporter.py
src/models/: pipeline_result.py
src/pipeline/: batch_pipeline.py  nbm_cache_manager.py  pipeline_executor.py  plotting_worker.py
src/services/: clustering_service.py  export_service.py  population_mapping_service.py  preprocessing_service.py
src/utils/: class_balancer.py  kaleido_scope.py  logger.py  marker_harmonizer.py
src/visualization/: __init__.py  flowsom_plots.py  gating_plots.py  html_report.py  pdf_report.py  plot_helpers.py  population_viz.py
tests/: test_clustering_utils.py  test_gating.py  test_mrd_calculator.py
