[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flowsom_pipeline_pro"
version = "1.0.0"
description = "Pipeline d'analyse de cytométrie en flux MRD (Maladie Résiduelle Détectable) basé sur FlowSOM — architecture modulaire production-ready"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Florian" }]
requires-python = ">=3.10"
keywords = ["flowsom", "cytometry", "flow cytometry", "MRD", "AML", "bioinformatics", "clustering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Dépendances minimales CPU (sans GUI, sans GPU)
dependencies = [
    "numpy>=1.26,<2.0",    # 1.x requis par numba ; éviter numpy 2.x
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "anndata>=0.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "loguru>=0.7",         # logging structuré
    "psutil>=5.9",         # monitoring CPU/RAM
]

[project.optional-dependencies]
# FlowSOM principal (saeyslab)
flowsom = ["flowsom==0.2.2"]

# Lecture/écriture FCS
fcs = ["flowio==1.4.0"]
fcs_export = ["fcswrite==0.6.4"]

# Transformations cytométriques
logicle  = ["flowkit"]
pytometry = ["pytometry==0.1.6"]

# Interface graphique PyQt5
gui = [
    "PyQt5==5.15.11",
    "PyQtWebEngine==5.15.7",
    "qtawesome>=1.3.0",
]

# Visualisation avancée / rapports
reports = [
    "reportlab>=4.0",
    "kaleido>=0.1.0",
    "plotly>=5.0",
]

# Accélération GPU — ne pas installer automatiquement :
# nécessite une commande pip avec --index-url CUDA spécifique.
# Voir requirements-gpu.txt pour les instructions détaillées.
gpu = [
    "torch>=2.0",
    "cupy",
    "scanpy==1.11.5",
    "GPUtil>=1.4.0",  # métriques GPU NVIDIA
]

# Notebooks Jupyter (développement / exploration)
notebooks = [
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
]

# Toutes les dépendances CPU (sans GPU, sans notebooks)
full = [
    "flowsom==0.2.2",
    "flowio==1.4.0",
    "fcswrite==0.6.4",
    "pytometry==0.1.6",
    "umap-learn>=0.5",
    "anndata>=0.10",
    "mudata>=0.3.0,<0.4.0",
    "igraph>=1.0.0",
    "networkx>=3.0",
    "reportlab>=4.0",
    "kaleido>=0.1.0",
    "plotly>=5.0",
    "PyQt5==5.15.11",
    "PyQtWebEngine==5.15.7",
    "qtawesome>=1.3.0",
    "numba>=0.58",
]

[project.scripts]
flowsom-analyze = "flowsom_pipeline_pro.cli.main:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
flowsom_pipeline_pro = [
    "config/default_config.yaml.example",
    "config/mrd_config.yaml",
    "config/panels/*.yaml",
]

# ── Outils de développement ────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
